Added title to page

--- a/web/index.html
+++ b/web/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="neuron_gl.css">
   </head>
   <body>
+    <h1> Visual Neural Net </h1>
     <div id="fps" style="float: left; position: absolute; color: green"></div>
-    <canvas id="lesson01-canvas" style="border: none;" width="500" height="500"></canvas>
+    <canvas id="lesson01-canvas" style="border: none;" width="300" height="300"></canvas>
     <div id="lesson_html"></div>
     <script type="application/dart" src="neuron_gl.dart"></script>
     <script src="packages/browser/dart.js"></script>
